--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ yarn.lock
 .env
 .vercel
 .output
+.nitro
 /build/
 /api/
 /server/build
@@ -16,5 +17,4 @@ yarn.lock
 /playwright-report/
 /blob-report/
 /playwright/.cache/
-
-count.txt
+.tanstack
