--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@tanstack/react-start": "^1.121.23",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "vite-tsconfig-paths": "^5.1.4"
+    "tailwind-merge": "^2.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "typescript": "^5.7.2",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "vite-tsconfig-paths": "^5.1.4"
   }
 }
