--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "start": "node .output/server/index.mjs"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.2.3",
     "@tanstack/react-router": "^1.121.21",
     "@tanstack/react-router-devtools": "^1.121.21",
     "@tanstack/react-start": "^1.121.23",
     "@vitejs/plugin-react": "4.5.2",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
+    "lucide-react": "0.517.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwind-merge": "^3.3.1",
+    "tailwind-merge": "3.3.1",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -26,6 +30,7 @@
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.10",
+    "tw-animate-css": "1.3.4",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
