--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.7",
+    "@tanstack/react-query": "5.80.7",
     "@tanstack/react-router": "^1.121.21",
     "@tanstack/react-router-devtools": "^1.121.21",
+    "@tanstack/react-router-with-query": "1.121.21",
     "@tanstack/react-start": "^1.121.23",
     "@vitejs/plugin-react": "4.5.2",
     "class-variance-authority": "0.7.1",
