--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build && tsc --noEmit",
-    "start": "node .output/server/index.mjs"
+    "start": "node .output/server/index.mjs",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.10",
@@ -16,15 +17,16 @@
     "@radix-ui/react-separator": "1.1.7",
     "@radix-ui/react-slot": "1.2.3",
     "@radix-ui/react-tooltip": "1.2.7",
-    "@tanstack/react-query": "5.80.7",
-    "@tanstack/react-router": "^1.121.21",
-    "@tanstack/react-router-devtools": "^1.121.21",
-    "@tanstack/react-router-with-query": "1.121.21",
-    "@tanstack/react-start": "^1.121.23",
-    "@vitejs/plugin-react": "4.5.2",
+    "@tanstack/react-query": "5.81.2",
+    "@tanstack/react-router": "^1.121.34",
+    "@tanstack/react-router-devtools": "^1.121.34",
+    "@tanstack/react-router-with-query": "1.121.34",
+    "@tanstack/react-start": "^1.121.34",
+    "axios": "1.10.0",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "lucide-react": "0.517.0",
+    "immer": "10.1.1",
+    "lucide-react": "0.522.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "3.3.1",
@@ -32,17 +34,27 @@
     "zustand": "5.0.5"
   },
   "devDependencies": {
+    "@eslint/js": "9.29.0",
     "@tailwindcss/postcss": "^4.1.10",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/node": "^22.15.32",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
+    "eslint": "9.29.0",
+    "eslint-plugin-react": "7.37.5",
+    "globals": "16.2.0",
     "postcss": "^8.5.6",
+    "prettier": "3.6.0",
+    "prettier-plugin-organize-imports": "4.1.0",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "1.3.4",
     "typescript": "^5.8.3",
+    "typescript-eslint": "8.34.1",
     "vite": "^6.3.5",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "3.2.4"
   },
   "packageManager": "yarn@4.9.2"
 }
