--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,12 +4,12 @@ changesetBaseRefs:
   - upstream/main
 
 changesetIgnorePatterns:
-  - "**/*.test.{js,ts}"
-  - "**/*.spec.{js,ts}"
+  - '**/*.test.{js,ts}'
+  - '**/*.spec.{js,ts}'
 
 compressionLevel: mixed
 
-defaultSemverRangePrefix: ""
+defaultSemverRangePrefix: ''
 
 enableGlobalCache: false
 
