--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vite build && tsc --noEmit",
     "start": "node .output/server/index.mjs",
     "lint": "eslint .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "test": "vitest run --reporter=verbose",
+    "coverage": "vitest run --reporter=html --coverage",
+    "prepare": "husky"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.10",
@@ -46,6 +49,8 @@
     "eslint": "9.29.0",
     "eslint-plugin-react": "7.37.5",
     "globals": "16.2.0",
+    "husky": "9.1.7",
+    "jsdom": "26.1.0",
     "postcss": "^8.5.6",
     "prettier": "3.6.0",
     "prettier-plugin-organize-imports": "4.1.0",
