--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,15 @@
 {
     "recommendations": [
-        "vitest.explorer"
+        "vitest.explorer",
+        "aaron-bond.better-comments",
+        "naumovs.color-highlight",
+        "ms-azuretools.vscode-docker",
+        "dbaeumer.vscode-eslint",
+        "visualstudioexptteam.vscodeintellicode",
+        "visualstudioexptteam.intellicode-api-usage-examples",
+        "esbenp.prettier-vscode",
+        "christian-kohler.path-intellisense",
+        "yoavbls.pretty-ts-errors",
+        "ms-vscode-remote.remote-wsl"
     ]
 }
